# SignaKit

./: .gitignore  CMakeLists.txt  DemoLayout.yaml  LICENSE  README.md  THREADING_MIGRATION.md  signals.yaml
.claude/: settings.local.json
cmake/: linux_host_windows_target.cmake  windows_host_windows_target.cmake
docs/: AsyncLua.md  Building.md  LuaCleanupCallbacks.md  LuaControlElements.md  LuaFrameCallbacks.md  LuaImageWindows.md  LuaPacketParsing.md  LuaQuickStart.md  LuaScripting.md  LuaSerialPort.md  LuaTotalLuafication.md  Program.md  ProtocolExamples.md  Todo.md
scripts/: README.md  accel_magnitude.lua  battery_power.lua  gps_speed_kmh.lua  gps_speed_kmh.lua_example  gyro_magnitude.lua  gyro_magnitude.lua_example  simple_filter.lua
scripts/callbacks/: README.md  altitude_alert.lua_example  battery_monitor.lua  cleanup_example.lua  frame_stats.lua_example  signal_logger.lua  vibration_detector.lua
scripts/examples/: image_display.lua_example  serial_reader.lua_example
scripts/io/: DataSource.lua  DataSource.lua_example  HTTPPoller.lua_example  README.md  SerialSource.lua_example  TCPDataSink.lua_example  UDPDataSink.lua  benchmark.lua_example  default_control_panel.lua_example  socket_test.lua_example
scripts/parsers/: README.md  TelemetryProject.lua  csv_example.lua_example  fast_binary.lua  json_example.lua_example  legacy_binary.lua
scripts/test/: async_test.lua  rest_api_demo.lua  tcp_test.lua
src/: LockFreeQueues.hpp  LuaCANSocket.hpp  LuaScriptManager.hpp  LuaScriptManager.hpp.backup  LuaSerialPort.hpp  LuaThreadBindings.hpp  LuaThreadManager.hpp  SignalConfigLoader.cpp  SignalConfigLoader.h  UIStateSnapshot.hpp  a.out  control_rendering.hpp  image_rendering.hpp  layout_persistence.hpp  main.cpp  mock_device  mock_device.cpp  plot_rendering.hpp  plot_types.hpp  signal_processing.hpp  struct_size_test.cpp  telemetry_defs.h  test_loader.cpp  types.hpp  ui_state.hpp
src/DataSinks/: DataSink.hpp  UDPDataSink.hpp
tools/: converter.py  generated_signals.yaml  generated_telemetry_defs.h
